--- a/Baby Names.Rmd
+++ b/Baby Names.Rmd
@@ -7,24 +7,44 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(babynames)
+library(tidyverse)
+
 ```
+``` {r}
 
-## R Markdown
+babynames %>% 
+  filter(name == "Prachi") %>% 
+  ggplot(aes(year, n)) + geom_col()
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+# restrict to just names that are top 1000 in the last year
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+topnames <- babynames %>% 
+  filter(year == "2017") %>% 
+  arrange(desc(n)) %>% 
+  slice(1:1000)
 
-```{r cars}
-summary(cars)
+# what preceptor did:
+
+top_1000 <- babynames %>% 
+  filter (year == max(year)) %>%  # this is so if you don't know that 2017 is the max
+  group_by(name) %>%  # this is so male and female names are acknowledged and then set up for summing in next line
+  summarise(total = sum (n)) %>%  #this is to add male and female occurrences of names
+  arrange(desc(total)) %>% 
+  slice (1:1000)
+
+# use new top_1000 dataset to filter orig babynames dataset
+smallerdata <- babynames[babynames$name %in% top_1000$name, ]
+
+#how preceptor did it
+babynames %>% 
+  inner_join(top_1000, by = "name")
+
+# the history of popularity of these 1000 names over time
+smallerdata %>% 
+  filter(name == "Mary") %>% 
+  ggplot(aes(year, n)) + geom_line()
+
+
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
